<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".TrainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/questionTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="24sp"
            android:layout_marginBottom="2dp" app:layout_constraintBottom_toTopOf="@+id/answerTextView"
            android:background="@android:color/holo_orange_light"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/answerTextView" android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/questionTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="24sp" app:layout_constraintHorizontal_bias="0.0"
            android:onClick="onSwapUncover" android:clickable="true" android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@+id/TableLay" android:background="@android:color/holo_green_light"/>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:gravity="bottom|center_vertical" app:layout_constraintHorizontal_bias="0.5"
        android:id="@+id/TableLay" android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/answerTextView">

    <Button style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/buttonEnd"
            android:onClick="onEndButton"
            android:text="@string/end_button"
            android:layout_gravity="fill"
            android:layout_weight="1" tools:background="e7e7e7"/>
    <Button style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/remove_button"
            android:id="@+id/buttonRemove"
            android:onClick="onRemoveButton"
            android:layout_gravity="fill"
            android:layout_weight="1" android:background="?attr/colorButtonNormal"/>
    <Button style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/uncover_button"
            android:id="@+id/buttonShow"
            android:layout_gravity="fill"
            android:onClick="onUncover" android:layout_weight="1" android:background="@android:color/darker_gray"/>
</LinearLayout>
</android.support.constraint.ConstraintLayout>
